--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
 <p id="q6"></p>
 
 <h2>Question 7: Text manipulation</h2>
-<label> Enter a string to manipulate :</label>
+<label> Enter a string to do string combination :</label>
 <input type="text" id="textManip"/>
-<button onclick="stringCombination()">Manipulate</button>
+<button onclick="stringCombination()">Submitt</button>
 <p id="q7"></p>
 
+<h2>Question 8: Text manipulation2</h2>
+<label> Enter a string to organize alphabetically :</label>
+<input type="text" id="alphabetOrder"/>
+<button onclick="alphabeticalOrder()">Organize word alphabetically</button>
+<p id="q8"></p>
+
+<h2>Question 9: Text manipulation3</h2>
+<label> Enter a string to manipulate :</label>
+<input type="text" id="longestWord"/>
+<button onclick="longestWord()">Organize sentence alphabetically</button>
+<p id="q9"></p>
 
 <script src="myjavascript.js">
 </script>
