--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p id="q3"></p>
 
 <h2>Question 4: Guessing game</h2>
-<label> Enter a number to guess :</label>
+<label> Enter a number:</label>
 <input type="number" min="1" max="10" id="numberToguess"/>
 <button onclick="guessNumber()">Submit</button>
 <p id="q4"></p>
@@ -30,28 +30,36 @@
 <p id="q5"></p>
 
 <h2>Question 6:  Reverse input</h2>
-<label> Enter a string to reverse :</label>
+<label> Enter a string :</label>
 <input type="text" id="reverse"/>
 <button onclick="reverseString()">Reverse</button>
 <p id="q6"></p>
 
 <h2>Question 7: Text manipulation</h2>
-<label> Enter a string to do string combination :</label>
+<label> Enter a string :</label>
 <input type="text" id="textManip"/>
-<button onclick="stringCombination()">Submitt</button>
+<button onclick="stringCombination()">String combination</button>
 <p id="q7"></p>
 
 <h2>Question 8: Text manipulation2</h2>
-<label> Enter a string to organize alphabetically :</label>
+<label> Enter a string :</label>
 <input type="text" id="alphabetOrder"/>
 <button onclick="alphabeticalOrder()">Organize word alphabetically</button>
 <p id="q8"></p>
 
 <h2>Question 9: Text manipulation3</h2>
-<label> Enter a string to manipulate :</label>
+<label> Enter a string :</label>
 <input type="text" id="longestWord"/>
 <button onclick="longestWord()">Organize sentence alphabetically</button>
 <p id="q9"></p>
+
+<h2>Question 10: Prime number</h2>
+<label> Enter a number :</label>
+<input type="number"  id="isPrime"/>
+<button onclick="checkPrimeNumber()">Submit</button>
+<p id="q10"></p>
+
+
 
 <script src="myjavascript.js">
 </script>
