--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 <button onclick="checkPrimeNumber()">Submit</button>
 <p id="q10"></p>
 
+<h2>Question 11: Type</h2>
+<p> The answer is in a console.</p>
+
 
 
 <script src="myjavascript.js">
