--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 <h2>Question 11: Type</h2>
 <p> The answer is in a console.</p>
 
+<h2>Question 12: Odd or Even</h2>
+<p> The answer is in a console.</p>
+
 
 
 <script src="myjavascript.js">
