join array with string

--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
 <h2>Question 12: Odd or Even</h2>
 <p> The answer is in a console.</p>
 
+<h2>Question 13: if loop statement</h2>
+<p> First 10 "happy numbers": </p>
+<span id="q13"></span>
 
+<h2>Question 14: Array</h2>
+<p> Join the elements in an array into a string: </p>
+<span id="q14"></span>
 
 <script src="myjavascript.js">
 </script>
