--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
 <p> Join the elements in an array into a string: </p>
 <span id="q14"></span>
 
+<h2>Question 15: Array2</h2>
+<label> Enter an array of numbers without [] ex:1,0,-4,20,7 :</label>
+<input type="text"  id="sort"/>
+<button onclick="sortNumbers()">Sort</button>
+<p id="q15"></p>
+
+
+
+
 <script src="myjavascript.js">
 </script>
 
