--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 <button onclick="sortNumbers()">Sort</button>
 <p id="q15"></p>
 
-
+<h2>Question 16: Array3</h2>
+<label> Enter an array :</label>
+<input type="text"  id="duplicate"/>
+<button onclick="removeDuplicate()">Remove duplicate</button>
+<p id="q16"></p>
 
 
 <script src="myjavascript.js">
