filter null and zero in an array

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
 <button onclick="removeDuplicate()">Remove duplicate</button>
 <p id="q16"></p>
 
+<h2>Question 17: Array4</h2>
+<label> Enter an array :</label>
+<input type="text"  id="nullAndZero"/>
+<button onclick="removeNullAndZero()">Remove null and zero</button>
+<p id="q17"></p>
+
 
 <script src="myjavascript.js">
 </script>
