get number of days a month

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
 <button onclick="removeNullAndZero()">Remove null and zero</button>
 <p id="q17"></p>
 
+<h2>Question 18: Number of days in a month</h2>
+<label> Enter a month:</label>
+<input type="text"  id="month"/>
+<br>
+<label> Enter a year :</label>
+<input type="number"  id="year"/>
+<button onclick="numberOfDaysInMonth()">Get number of days</button>
+<p id="q18"></p>
+
 
 <script src="myjavascript.js">
 </script>
