--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <main>
       <h2>Exercise 1 – JavaScript Clock</h2>
-      <p class="question">
+      <div class="question">
         Add an element to your page that displays the current date, time and
         which day of the week it is, and write a JavaScript script that updates
         it every second so that it always shows the current time. The expected
@@ -28,7 +28,7 @@
         it that checks whether the year entered is 
         a leap year.
       </div>
-      <label class="question"> Enter a year then press enter :</label>
+      <label > Enter a year then press enter :</label>
       <input type="number" onkeydown="findLeapYear(this)" />
       <p id="isLeapYear" class="answer"></p>
 
@@ -98,9 +98,8 @@
       </button>
       <p id="q8"></p>
 
-      <h2>Question 9: Text manipulation3</h2>
+      <h2>Exercise 9: Text manipulation3</h2>
       <div class="question">
-        Exercise 9 – Text manipulation 3
         Add an input field that lets you enter a sentence, and tie a script to it does 
         two things; first converts the first letter of each word to upper case and second 
         finds the word with the most letters. Example: Input: “welcome to JavaScript” 
@@ -111,9 +110,8 @@
       <button onclick="longestWord()" class="btn btn-primary">submitt</button>
       <p id="q9" class="answer"></p>
 
-      <h2>Question 10: Prime number</h2>
+      <h2>Exercise 10: Prime number</h2>
       <div class="question">
-        Exercise 10 – Prime number
         Add an input field that lets you enter a number, and tie a script to it that
         checks whether the number entered is a prime or not.  
       </div>
@@ -148,9 +146,8 @@
       </div>
       <p id="q13" class="answer">Not done</p>
 
-      <h2>Question 14: Array</h2>
-      <div class="question">
-        Exercise 14 – Array
+      <h2>Exercise 14 – Array</h2>
+      <div class="question">        
         Add a script to join the elements in an array into a string and display it.
         Sample array: var workDays = [“Monday”, “Tuesday”, “Wednesday”, “Thursday”, “Friday”];
         Expected output: Monday, Tuesday, Wednesday, Thursday and Friday are workdays.
